# craft_interpreter

./: DataTypes.hpp  Scanner.hpp  Scanning.hpp  a.out  json_examples.json  json_parser.cpp  json_parser.hpp  main.cpp  parser.cpp  parser.hpp
JsonParser/: CMakeLists.txt  README.md
JsonParser/include/: DataTypes.hpp  io.hpp  json_parser.hpp  jsondatas.hpp  scanner.hpp
JsonParser/json_examples/: json_example2.json  json_example3.json  json_example4.json
JsonParser/src/: CMakeLists.txt  file_operations.cpp  json_parser.cpp  json_parser_io.cpp  json_parser_parse.cpp  json_parser_scan.cpp  json_parser_write.cpp  main.cpp
Lox/: AstPrinter.hpp  Expr.hpp  GenerateAst.cpp  GenerateAst.hpp  Interpreter.hpp  Lox.cpp  Lox.hpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Token.hpp  TokenType.hpp  a.out  main.cpp  test.lox
json/: json_examples.json  json_parser.cpp  main.cpp  parser.cpp
json/include/: DataTypes.hpp
json/src/: main.cpp
